k8s/apps/jellyfin/httproute.yml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: jellyfin
  namespace: default
spec:
  hostnames:
    - jellyfin.int.winning.wtf
  parentRefs:
    - name: eg    # same Gateway as before
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      backendRefs:
        - name: jellyfin
          port: 80
